--- a/Project8/templates/splash.html
+++ b/Project8/templates/splash.html
@@ -22,7 +22,8 @@
         </button>
     </div>
     <footer class="text-center" style="font-family: Quicksand, sans-serif;">
-        <div class="social"><a data-bs-tooltip="" data-toggle="tooltip" href="https://github.com/jbjulia"
+        <div class="social"><a data-bs-tooltip="" data-toggle="tooltip"
+                               href="https://github.com/jbjulia/SDEV300/tree/master/Project8"
                                title="View source code"><i class="icon ion-social-github"></i></a></div>
         <p class="copyright">Created by Joseph Julian © 2020</p>
     </footer>
