--- a/Project8/templates/password-reset.html
+++ b/Project8/templates/password-reset.html
@@ -9,17 +9,15 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <link href="../static/fonts/ionicons.min.css" rel="stylesheet">
     <link href="../static/css/styles.min.css" rel="stylesheet">
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    {% for message in messages %}
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }}" role="alert">
         <span>{{ message }}</span>
         <button aria-label="Close" class="close" data-dismiss="alert" type="button">
-            <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true">x</span>
         </button>
     </div>
     {% endfor %}
-    {% endif %}
     {% endwith %}
 </head>
 
@@ -29,8 +27,10 @@
     <form method="post">
         <h2 class="sr-only">Login Form</h2>
         <div class="illustration"><i class="icon ion-ios-refresh-empty" style="color: #d63031;"></i></div>
-        <div class="form-group"><input class="form-control" name="email" placeholder="Email" type="email"></div>
-        <div class="form-group"><input class="form-control" name="password" placeholder="Password" type="password">
+        <div class="form-group"><input class="form-control" name="email" placeholder="Email" required type="email">
+        </div>
+        <div class="form-group"><input class="form-control" name="password" placeholder="Password" required
+                                       type="password">
         </div>
         <div class="form-group">
             <button class="btn btn-primary btn-block" style="background-color: #d63031;" type="submit">Reset Password
@@ -40,7 +40,8 @@
 </div>
 <div class="footer-basic" style="font-family: Quicksand, sans-serif;">
     <footer>
-        <div class="social"><a data-bs-tooltip="" data-toggle="tooltip" href="https://github.com/jbjulia"
+        <div class="social"><a data-bs-tooltip="" data-toggle="tooltip"
+                               href="https://github.com/jbjulia/SDEV300/tree/master/Project8"
                                title="View source code"><i class="icon ion-social-github"></i></a></div>
         <p class="copyright">Created by Joseph Julian © 2020</p>
     </footer>
